# osm-tools

./: README.md
district-extractor/: Readme.md  postgis_export.py  pyproject.toml
street-extractor/: Readme.md  extractor.ipynb  extractor.py  postgis_export.py  pyproject.toml  requirements.txt
